syntax = "proto3";

package socialmedia;

service SocialMediaService {
    rpc CreatePost(Post) returns (PostResponse) {}
    rpc UpdatePost(Post) returns (PostResponse) {}
    rpc DeletePost(PostRequest) returns (PostResponse) {}
    rpc GetPost(PostRequest) returns (Post) {}
    rpc ListPost(Empty) returns (PostList) {}
    rpc ListTrendingPosts(Empty) returns (PostList) {}
    rpc ListTrendingKeywords (Empty) returns (KeywordList) {}
    rpc RecommendPosts (UserRequest) returns (PostList) {}
}

message Post {
    string _id = 1;
    string title = 2;
    string content = 3;
    repeated string categories = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message PostRequest {
    string _id = 1;
}

message PostResponse {
    bool success = 1;
}

message Empty {}

message PostList {
    repeated Post posts = 1;
}

message KeywordList {
    repeated string keywords = 1;
}

message UserRequest {
    string userId = 1;
}

